restyled top nav bar when collapsed to smaller screen, still ajavascript bug to fix

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.css
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.css
@@ -491,7 +491,14 @@ footer {
 }
 
 /* SMALLEST MOBILE SCREEN */
-@media (max-width: 454px) {
+@media screen and (max-width: 342px) {
+    .manage-nav {
+        width: 320px !important;
+        margin-left: -17px;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 454px) {
     #search_box {
         width: 70%;
         margin-left: 8%;;
@@ -507,14 +514,18 @@ footer {
         float: right;
         margin-right: 9%;
     }
+    .manage-nav ul li {
+        width: 100px;
+    }
 }
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
     .manage-nav ul li {
         text-align: center;
         margin: 0 2px -10px -4px;
     }
 }
 @media screen and (max-width: 767px) {
+
     /*** RESTYLING OF FIRST LEVEL DROPDOWN NAV ***/
     .nav-tabs li a {
         margin-bottom: 0px;
@@ -523,8 +534,9 @@ footer {
         border-top: 0px !important;
         border-right: 0px !important;
         border-radius: 0 0 0 0 !important;
+        font-weight: bold;
     }
-    .nav-tabs li {
+    .top-nav li {
         width: 100% !important;
         text-align: left !important;
     }
@@ -532,7 +544,9 @@ footer {
     .nav-tabs li.active a,
     .nav-tabs li a:hover,
     .nav-tabs li.active a,
-    .nav-tabs li a:active {
+    .nav-tabs li a:active,
+    .navbar-nav .open .dropdown-menu,
+    .navbar-nav .open .dropdown-menu li a:hover {
         border-left: 0px !important;
         border-top: 0px !important;
         border-right: 0px !important;
@@ -540,12 +554,18 @@ footer {
         border-radius: 0 0 0 0;
     }
     .nav-tabs li.active a:hover,
-    .nav-tabs li a:hover, 
-    .nav-tabs li.active a {
+    .nav-tabs li a:hover,
+    .navbar ul li.dropdown.open a, 
+    .top-nav li.active a,
+    #points {
         color: white !important;
+        font-weight: bold;
     }
-    .nav-tabs li.active a,
-    .nav-tabs li a:active {
+    .nav-tabs li a:active,
+    .navbar ul li.dropdown.open a,
+    li.dropdown.open.sub-active,
+    .navbar-nav .open .dropdown-menu,
+    #points, .dropdown-menu .divider {
         background: transparent !important;
     }
     #username-divider {
@@ -553,7 +573,21 @@ footer {
         background: #a3ceea;
         color: #a3ceea;
     }
+    .dropdown-menu .divider {
+        margin: 6px 0px;
+    }
+    .nav-divider {
+        background: #a3ceea;
+    }
+    .navbar ul li.dropdown.open ul.dropdown-menu li a,
+    #points {
+        text-transform: uppercase !important;
+    }
+    .navbar ul li.dropdown.open ul.dropdown-menu li {
+        padding-left: 20px;
+    }
     /*** END RESTYLE OF FIRST LEVEL DROPDOWN NAV ***/
+
     .navbar-form {
         padding: 0px 0px;
     }
@@ -578,15 +612,19 @@ footer {
         overflow-y: hidden;
         overflow-x: hidden;
     }
-    .mobile-nav, .mobile-manage-nav {
-        margin: 5px 0px;
-    }
     .teach-nav, .manage-nav {
         border-bottom: none !important;
         text-align: center;
     }
-    .teach-nav li, .manage-nav li {
+    .teach-nav li, .manage-nav ul li {
         border-top-left-radius: 0px !important; 
         border-top-right-radius: 0px !important;
+        margin: 2px 0px !important;
+        border-bottom: 3px solid #5AA685;
+    }
+}
+@media screen and (min-width: 767px) {
+    .nav-divider {
+        display: none !important;
     }
 }
